update to return an immutable list based on newer Java version